[workspace]
members = ["lib_blink", "blink", "blink_macros"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.11"
byteorder = "1.5.0"
cesu8 = "1.1.0"
flate2 = { version = "1.0.30", features = ["zlib"] }
num = "0.4.3"
thiserror = "2.0.11"
zerocopy = { version = "0.8.17", features = ["derive", "zerocopy-derive"] }
tokio = "1.39.3"
socket2 = "0.5.8"
