[package]
name = "lib_blink"
version = "0.1.0"
edition = "2021"

[dependencies]
blink_macros = { path = "../blink_macros" }
ahash.workspace = true
byteorder.workspace = true
cesu8.workspace = true
flate2.workspace = true
num.workspace = true
thiserror.workspace = true
zerocopy.workspace = true
serde = { version = "1.0.218", features = ["derive"] }
serde_json.workspace = true
